--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,5 @@
-@Library('pipeline-library-demo1') _pipeline {
+@Library('pipeline-library-demo1') _
+pipeline {
   agent any
   tools {nodejs "node"}
     
